--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h1 class="menu__logo">
                         Minimal Tones
                     </h1>
-                    <p class="menu__copyright">2022 all rights reserved</p>
+                    <p class="menu__copyright">2024 Savannah Israel all rights reserved</p>
                 </div>
             </div>
         </nav>
@@ -125,7 +125,8 @@
 <!-- partial -->
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
 <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
-<script src='https://assets.codepen.io/16327/ScrollSmoother.min.js'></script><script  src="./script.js"></script>
+<script src='./ScrollSmoother.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
+
